--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=DM+Sans:ital@0;1&display=swap" rel="stylesheet">
+
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -32,6 +36,11 @@
     <title>React App</title>
   </head>
   <body>
+    <a href="/">
+      <img id="logo" src="./logo.PNG" alt="Girl in a jacket" width="500" height="600">
+    </a>
+    <!-- <h2 id="mush">Mush</h2><h2 id="home">|Home</h2> -->
+    <h1 id="mush">Mush|Home</h1>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
