--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,10 +37,10 @@
   </head>
   <body>
     <a href="/">
-      <img id="logo" src="./logo.PNG" alt="Girl in a jacket" width="500" height="600">
+      <img id="logo" src="./logo.PNG" alt="MushHome logo" width="500" height="600">
     </a>
-    <!-- <h2 id="mush">Mush</h2><h2 id="home">|Home</h2> -->
-    <h1 id="mush">Mush|Home</h1>
+    <!-- <h1 id="mush">Mush|Home</h1> -->
+    <h1 id="mush"> <span class="logo-yellow">Mush |</span> <span class="logo-white">Home</span></h1>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -56,3 +56,4 @@
   </body>
 
 </html>
+
