--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,7 +37,7 @@
   </head>
   <body>
     <a href="/">
-      <img id="logo" src="./logo.PNG" alt="MushHome logo" width="500" height="600">
+      <img id="logo" src="./logo.PNG" alt="MushHome logo">
     </a>
     <!-- <h1 id="mush">Mush|Home</h1> -->
     <h1 id="mush"> <span class="logo-yellow">Mush |</span> <span class="logo-white">Home</span></h1>
